--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "fem-expenses-chart-component",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^4.3.2"
-  },
-  "dependencies": {
-    "chart.js": "^4.3.0"
-  }
+	"name": "fem-expenses-chart-component",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
+	},
+	"devDependencies": {
+		"gh-pages": "^5.0.0",
+		"vite": "^4.3.2"
+	},
+	"dependencies": {
+		"chart.js": "^4.3.0"
+	}
 }
